# SRC2-object-detection

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/src2_object_detection/: hazard_detection.h
launch/: excavator_inference.launch  excavator_object_detection.launch  hauler_inference.launch  hauler_object_detection.launch  inference.launch  object_detection_round1.launch  object_detection_round2.launch  object_detection_services.launch  object_detection_where_to_park.launch  obstacle_detection.launch  obstacle_detection_for_Bernardo.launch  obstacle_detection_master.launch  obstacle_detection_two_scouts.launch  qual_round3.launch  round3_part1_test.launch  scout2_object_detection.launch  scout_inference.launch  scout_object_detection.launch
launch/deprecated/: inference.launch
matlab/: test_obj_detection.m
msg/: Box.msg  DetectedBoxes.msg
object-detection_msgs/: CMakeLists.txt  package.xml
object-detection_services/: CMakeLists.txt  package.xml
object-detection_state_machice/: CMakeLists.txt  package.xml
object_estimation/: CMakeLists.txt  package.xml
src/: align_base_station_service.py  allign_base_station_service.py  approach_base_station_service.py  approach_base_station_service_r1.py  approach_base_station_service_round2.py  approach_base_station_service_round_1.py  approach_bin.py  approach_excavator.py  distance_estimation_service.py  hauler_parking_position_service.py  hazard_detection.cpp  inference.py  inference2.py  inference_service.py  object_estimation_call.py  object_estimation_service.py  object_to_point_cloud.py  obstacle_detection_multiple_rovers.py  obstacle_detection_multiple_rovers_test.py  plot_boxes_real_time.py  round3_part1.py  state_machine.py  test.py  test_driving.py
src/bounding_box_utils/: bounding_box_utils.py
src/data_generator/: data_augmentation_chain_constant_input_size.py  data_augmentation_chain_original_ssd.py  data_augmentation_chain_satellite.py  data_augmentation_chain_variable_input_size.py  object_detection_2d_data_generator.py  object_detection_2d_geometric_ops.py  object_detection_2d_image_boxes_validation_utils.py  object_detection_2d_misc_utils.py  object_detection_2d_patch_sampling_ops.py  object_detection_2d_photometric_ops.py
src/deprecated/: inference.py  obstacle_detection_open_cv.py
src/keras_layers/: keras_layer_AnchorBoxes.py  keras_layer_DecodeDetections.py  keras_layer_DecodeDetectionsFast.py  keras_layer_L2Normalization.py
src/keras_loss_function/: keras_ssd_loss.py
src/models/: keras_ssd300.py  keras_ssd512.py  keras_ssd7.py
src/ssd_encoder_decoder/: matching_utils.py  ssd_input_encoder.py  ssd_output_decoder.py
srv/: AlignBaseStation.srv  ApproachBaseStation.srv  ApproachBin.srv  ApproachExcavator.srv  DistanceEstimation.srv  FindObject.srv  ObjectEstimation.srv  WhereToParkHauler.srv  align_base_station.srv  find_cubesat.srv  object_estimation.srv
ssd_classifier/: CMakeLists.txt  package.xml
